# legacy-delphi-project-analyzer

./: CHANGELOG.md  README.md  pyproject.toml
docs/: quick-start-cline.md
src/legacy_delphi_project_analyzer/: __init__.py  __main__.py  agent_loop.py  artifacts.py  benchmarking.py  cheatsheet.py  cli.py  cline.py  cline_bridge.py  cline_session.py  codegen.py  console.py  context_compiler.py  controlled_delivery.py  delivery.py  developer_handoff.py  failure_replay.py  feedback.py  golden_tasks.py  human_review.py  knowledge.py  llm.py  model_profiles.py  models.py  multi_repo_map.py  oracle_bff.py  orchestrator.py  patch_apply.py  patch_packs.py  patch_validation.py  phase_state.py  phases.py  pipeline.py  progress_layer.py  prompting.py  repair_tasks.py  repo_validation.py  reporting.py  retry_planner.py  runtime_errors.py  (+8 more)
src/legacy_delphi_project_analyzer/analyzers/: __init__.py  dfm.py  pascal.py  sql_xml.py
src/legacy_delphi_project_analyzer/validators/: __init__.py  evidence.py  schema.py
tests/: test_benchmarking.py  test_cheatsheet.py  test_cli_console.py  test_cline_bridge.py  test_delivery.py  test_feedback.py  test_knowledge.py  test_llm.py  test_oracle_bff.py  test_orchestrator.py  test_pascal_dfm.py  test_pipeline.py  test_runtime_experience.py  test_sql_xml.py  test_subagents.py  test_target_integration.py  test_taskpacks.py  test_v4_features.py  test_v63_features.py  test_v6_features.py  test_validator_loop_codegen.py  test_workspace.py  test_workspace_graph.py
tests/fixtures/sample_project/: OrderEntry.dfm  OrderEntry.pas  common.xml  (+1 more)
(+4 files in other folders)
