[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "legacy-delphi-project-analyzer"
version = "3.1.1"
description = "Multi-phase analyzer for legacy Delphi projects targeting LLM-assisted web transition."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]

[project.scripts]
legacy-delphi-analyzer = "legacy_delphi_project_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
